# cuda_image_processing

./: .gitignore  CMakeLists.txt  README.md
cvtcolor/: CMakeLists.txt  cvtcolor.cpp  cvtcolor.cu  cvtcolor.hpp
letterbox/: CMakeLists.txt  letterbox.cpp  letterbox.cu  letterbox.hpp
norm/: CMakeLists.txt  norm.cpp  norm.cu  norm.hpp
resize/: CMakeLists.txt  resize.cpp  resize.cu  resize.hpp
warpaffine/: CMakeLists.txt  warpaffine.cpp
